--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -20,7 +20,7 @@
   </ul>
 
   <h5 class="mt-4">3. Information Sharing</h5>
-  <p>We do not sell or share your personal data with third parties, except:</p>
+  <p>We do not sell or share your personal data with third parties, except: IMGBB AND YOUTUBE UNLISTED</p>
   <ul>
     <li>When required by law or legal process.</li>
     <li>To trusted service providers assisting in our operations.</li>
